# CppTemplateApplication

./: CMakeLists.txt  Readme.md  hello.cpp  hello.h  hello.tests.cpp  main.cpp
